// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Record /> should render a Record and no Tooltip with only a custom tooltip 1`] = `
.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="Not Provided"
  tooltipProps={
    Object {
      "toggleComponent": [Function],
    }
  }
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
            </div>
          </StyledComponent>
        </styled.div>
        <p
          key=".0"
        >
          Chief Executive Officer
        </p>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record and tooltip with a custom tooltip and tooltipContent 1`] = `
.c2 {
  cursor: help;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="Not Provided"
  tooltipContent="a"
  tooltipProps={
    Object {
      "toggleComponent": [Function],
    }
  }
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
              <TooltipPopover
                toggleComponent={[Function]}
                variant="neutral"
              >
                <styled.span>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-ifAKCX",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  cursor: ",
                            [Function],
                            ";
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-ifAKCX",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <span
                      className="c2"
                    >
                      <span
                        aria-expanded={false}
                        aria-haspopup={true}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        role="button"
                      />
                    </span>
                  </StyledComponent>
                </styled.span>
                <Popover
                  animationType="tooltip"
                  id=""
                  isOpen={false}
                  parentAnchorPosition="auto"
                  parentRef={
                    Object {
                      "current": <span
                        aria-expanded="false"
                        aria-haspopup="true"
                        role="button"
                      />,
                    }
                  }
                  popoverAnchorPosition="auto"
                >
                  <Portal
                    containerInfo={<body />}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={false}
                      mountOnEnter={true}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={200}
                      unmountOnExit={true}
                    />
                  </Portal>
                </Popover>
              </TooltipPopover>
            </div>
          </StyledComponent>
        </styled.div>
        <p
          key=".0"
        >
          Chief Executive Officer
        </p>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record component without children 1`] = `
.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #8FA1B3;
  font-weight: 400;
  display: block;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="No Position Title"
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
            </div>
          </StyledComponent>
        </styled.div>
        <Text
          color="#8FA1B3"
          isInline={false}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            color="#8FA1B3"
            data-component-type="text"
            isInline={false}
            textType="body"
          >
            <StyledComponent
              as="span"
              color="#8FA1B3"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={false}
              textType="body"
            >
              <span
                className="c2"
                color="#8FA1B3"
                data-component-type="text"
              >
                No Position Title
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record component, creating a Text child with the provided number 1`] = `
.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="FTE"
  noChildrenText="Not Provided"
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      FTE
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
            </div>
          </StyledComponent>
        </styled.div>
        <Text
          color="#262D33"
          isInline={true}
          key=".0"
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            color="#262D33"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              color="#262D33"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                color="#262D33"
                data-component-type="text"
              >
                1.000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record component, creating a Text child with the provided text 1`] = `
.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="Not Provided"
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
            </div>
          </StyledComponent>
        </styled.div>
        <Text
          color="#262D33"
          isInline={true}
          key=".0"
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            color="#262D33"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              color="#262D33"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                color="#262D33"
                data-component-type="text"
              >
                Chief Executive Officer
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record component, with the provided component child 1`] = `
.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="Not Provided"
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
            </div>
          </StyledComponent>
        </styled.div>
        <p
          key=".0"
        >
          Chief Executive Officer
        </p>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;

exports[`<Record /> should render a Record with a Tooltip 1`] = `
.c3 {
  display: inline-block;
  font-stretch: normal;
  --fa-primary-color: #2512B3;
  --fa-secondary-color: #2512B3;
  color: #424F5C;
}

.c3.icon {
  text-align: center;
  font-size: 1rem;
}

.c2 {
  cursor: help;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-bottom: 4px;
}

.c0 .label-component {
  padding-right: .25rem;
}

<Record
  name="Position Title"
  noChildrenText="Not Provided"
  tooltipContent="a"
>
  <styled.div
    data-component-type="record"
  >
    <StyledComponent
      data-component-type="record"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": false,
            "lastClassName": "dMdnOw",
            "rules": Array [
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": "div",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className=""
        data-component-type="record"
      >
        <styled.div
          data-component-type="record_name"
        >
          <StyledComponent
            data-component-type="record_name"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-iwsKbI",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-bottom: 4px;
  .label-component {
    padding-right: .25rem;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-iwsKbI",
                "target": "div",
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
              data-component-type="record_name"
            >
              <Text
                className="label-component"
                color="#424F5C"
                isInline={true}
                tag="span"
                type="small"
              >
                <styled.span
                  as="span"
                  className="label-component"
                  color="#424F5C"
                  data-component-type="text"
                  isInline={true}
                  textType="small"
                >
                  <StyledComponent
                    as="span"
                    className="label-component"
                    color="#424F5C"
                    data-component-type="text"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-dnqmqq",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "

  ",
                            [Function],
                            "
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-dnqmqq",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isInline={true}
                    textType="small"
                  >
                    <span
                      className="c1 label-component"
                      color="#424F5C"
                      data-component-type="text"
                    >
                      Position Title
                    </span>
                  </StyledComponent>
                </styled.span>
              </Text>
              <TooltipPopover
                toggleComponent={[Function]}
                variant="neutral"
              >
                <styled.span>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-ifAKCX",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  cursor: ",
                            [Function],
                            ";
",
                          ],
                        },
                        "displayName": "styled.span",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-ifAKCX",
                        "target": "span",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <span
                      className="c2"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        className="popoverTrigger"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        role="button"
                        type="button"
                      >
                        <FontAwesomeIcon
                          color="#424F5C"
                          icon="question-circle"
                          type="regular"
                        >
                          <Icon
                            color="#424F5C"
                            icon="far fa-question-circle"
                          >
                            <styled.i
                              aria-hidden={true}
                              className="icon far fa-question-circle"
                              color="#424F5C"
                              size="medium"
                            >
                              <StyledComponent
                                aria-hidden={true}
                                className="icon far fa-question-circle"
                                color="#424F5C"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-htpNat",
                                      "isStatic": false,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "
  display: inline-block;
  font-stretch: normal;
  --fa-primary-color: ",
                                        "#2512B3",
                                        ";
  --fa-secondary-color: ",
                                        "#2512B3",
                                        ";

  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "
  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "

  ",
                                        [Function],
                                        "

  &.icon {
    text-align: center;

  ",
                                        [Function],
                                        "
  }
",
                                      ],
                                    },
                                    "displayName": "styled.i",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-htpNat",
                                    "target": "i",
                                    "toString": [Function],
                                    "usesTheme": false,
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size="medium"
                              >
                                <i
                                  aria-hidden={true}
                                  className="c3 icon far fa-question-circle"
                                  color="#424F5C"
                                  size="medium"
                                />
                              </StyledComponent>
                            </styled.i>
                          </Icon>
                        </FontAwesomeIcon>
                      </button>
                    </span>
                  </StyledComponent>
                </styled.span>
                <Popover
                  animationType="tooltip"
                  id=""
                  isOpen={false}
                  parentAnchorPosition="auto"
                  parentRef={
                    Object {
                      "current": .c0 {
  display: inline-block;
  font-stretch: normal;
  --fa-primary-color: #2512B3;
  --fa-secondary-color: #2512B3;
  color: #424F5C;
}

.c0.icon {
  text-align: center;
  font-size: 1rem;
}

<button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="popoverTrigger"
                        role="button"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="c0 icon far fa-question-circle"
                          color="#424F5C"
                        />
                      </button>,
                    }
                  }
                  popoverAnchorPosition="auto"
                >
                  <Portal
                    containerInfo={<body />}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={false}
                      mountOnEnter={true}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={200}
                      unmountOnExit={true}
                    />
                  </Portal>
                </Popover>
              </TooltipPopover>
            </div>
          </StyledComponent>
        </styled.div>
        <p
          key=".0"
        >
          Chief Executive Officer
        </p>
      </div>
    </StyledComponent>
  </styled.div>
</Record>
`;
